# sasm

./: Cargo.toml  LICENSE  OMEGA-13.md  README.md  TODO.md
doc/: config.md  usage.md  useage.md
misc/: oma-migrate
src/: cli.rs  config.rs  main.rs  repo.rs
src/actions/: bench.rs  download.rs  execute.rs  install_all.rs  local.rs  mod.rs  pick.rs  search.rs
src/actions/local/: deb.rs  mod.rs
src/actions/search/: mod.rs  pkg.rs  provide.rs
src/actions/search/matcher/: mod.rs
src/actions/search/provide/: mod.rs  parse.rs
src/alpm/: db.rs  local.rs  mod.rs
src/apmsolver/: dpkg.rs  mod.rs  pool.rs  sat.rs  types.rs  version.rs
src/cli/: mod.rs  prompt.rs
src/config/: mod.rs
src/config/blueprint/: mod.rs
src/config/db/: mod.rs  verify.rs
src/config/repo/: mirrorlist.rs  mod.rs
src/db/: mod.rs  verify.rs
src/executor/: alpm.rs  download.rs  dpkg.rs  error.rs  mod.rs  types.rs
src/executor/modifier/: dont_remove.rs  ignorerules.rs  mod.rs  unpack_only.rs
src/pool/: in_memory.rs  mod.rs
src/pool/source/: debrepo.rs  local.rs  mod.rs  pacdb.rs
src/repo/: mod.rs  verify.rs
src/solv/: actions.rs  ffi.rs  mod.rs
src/solver/: deb.rs  improve.rs  incompatible.rs  mod.rs  pool.rs  sort.rs  types.rs  version.rs
src/solver/depcalc/: improve.rs
src/solver/pool/: in_memory.rs  mod.rs  tools.rs
src/types/: action.rs  checksum.rs  mod.rs  version.rs
src/types/actions/: mod.rs  table.rs
src/types/config/: blueprint.rs  ignorerule.rs  ignorerules.rs  mod.rs  wishlist.rs
src/types/config/blueprint/: mod.rs  parse.rs  variables.rs
src/types/config/repo/: mod.rs
src/types/version/: mod.rs  ord.rs  parse.rs  pkgversion.rs  requirement.rs  test.rs  version.rs
src/utils/: debcontrol.rs  downloader.rs  lock.rs  mod.rs  pacparse.rs  pager.rs
src/utils/cli/: mod.rs  prompt.rs
