[package]
name = "omakase"
version = "0.1.0"
authors = ["Leo Shen <i@szclsya.me>"]
license = "GPL-2.0-or-later"
edition = "2021"

[[bin]]
name = "oma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
regex = "1"
lazy_static = "1"
# Solver
varisat = "0.2"
petgraph = "0.6"
# Dealing with deb control files and InRelease
debcontrol = "0.1"
sequoia-openpgp = { version = "1", default_features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sha2 = "0.9"
hex = "0.4"
# cli
console = "0.14.1"
clap = "3.0.0-beta.5"
# 0.16.2 doesn't work with tokio
indicatif = "0.17.0-beta.1"
dialoguer = "0.8"
# Dealing with config files
serde = "1"
toml = "0.5"
nom = "7"
# Network stack
futures-util = "0.3"
tokio = { version = "1.10", default_features = false, features = ["rt", "macros", "fs", "io-util"] }
bytes = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
# Actions modifier
nix = "0.22"
# Parallel searching
rayon = "1"
