[package]
name = "sasm"
version = "0.1.0-beta.8"
authors = ["Leo Shen <i@szclsya.me>"]
license = "GPL-2.0-or-later"
edition = "2021"

[[bin]]
name = "sasm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
regex = "1"
lazy_static = "1"
ctrlc = { version = "3", features = ["termination"] }
# Solver
varisat = "0.2"
petgraph = "0.6"
# Dealing with deb control files and InRelease
sequoia-openpgp = "1.16"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
# cli
console = "0.15"
clap = { version = "3", features = ["derive"] }
tabled = { version = "0.4", features = ["color"] }
indicatif = "0.17"
dialoguer = "0.9"
# Dealing with config files
serde = "1"
toml = "0.7"
nom = "7.1"
# Network stack
futures-util = "0.3"
tokio = { version = "1", default_features = false, features = ["rt", "macros", "fs", "io-util"] }
bytes = "1"
reqwest = "0.11" 
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
flate2 = "1"
# Actions modifier
nix = "0.23"
# Parallel db generation
rayon = "1"
# Read deb files
ar = "0.9"
tar = "0.4"
xz2 = "0.1"
# Search stuff
strsim = "0.10"
memchr = "2"
